# PrivacyChat

./: README.md  chains.py  chat.py  main.py  nodes.py  presidioReconizer.py  privacyChat.py  pyproject.toml  schemas.py  test.py
config_files/: configSpacy.yaml  prompts.ini  test.ini
misc/: txt.txt
results/: salidaTestSLMData.txt  salidaTestSLMLongMessage.txt  salidaTestSLMMemory.txt  salidaTestSLMShortMessage.txt
